[package]
name = "oviiirs_archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }
bincode = "1.3.3"
typed-path = "0.7"
#lzss = "0.9.1"
itertools = "0.12.0"