[package]
name = "oviiirs_archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }
bincode = "1.3.3"
typed-path = "0.7"
#lzss = "0.9.1" #can't get this to work.
itertools = "0.12.0"
lz4 = "1.24.0"
regex = "1.10.2"
crossterm = "0.27.0"

[dependencies.cursive]
cursive = "0.20.0"
default-features = false
features = ["crossterm-backend"]